--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "prettier": "^1.16.4",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-transition-group": "^2.5.0",
+    "redux": "^4.0.1",
     "typescript": "3.1.6",
     "url-search-params-polyfill": "^5.0.0"
   },
@@ -32,8 +34,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/react-redux": "^7.0.3",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-transition-group": "^2.0.14",
+    "@types/redux-thunk": "^2.1.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-react": "^3.6.0"
