--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,12 @@
 {
+  "arrowParens": "avoid",
   "bracketSpacing": true,
-  "tabWidth": 2,
-  "useTabs": false,
-  "semi": false,
-  "jsxBracketSameLine": true,
+  "jsxBracketSameLine": false,
   "printWidth": 80,
-  "singleQuote": true
+  "proseWrap": "always",
+  "semi": false,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "useTabs": false
 }
