--- a/package.json
+++ b/package.json
@@ -3,29 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "23.3.9",
-    "@types/node": "10.12.2",
-    "@types/react": "^16.7.3",
-    "@types/react-dom": "16.0.9",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
-    "react-redux": "^5.1.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "react-transition-group": "^2.5.0",
-    "redux": "^4.0.1",
+    "@types/jest": "24.0.15",
+    "@types/node": "12.6.8",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.5",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-transition-group": "^4.2.1",
+    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "typescript": "3.1.6",
-    "url-search-params-polyfill": "^5.0.0"
+    "typescript": "^3.5.3",
+    "url-search-params-polyfill": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "test": "react-scripts test --verbose=false",
+    "eject": "react-scripts eject",
+    "commit": "git-cz",
+    "lint": "eslint src/**",
+    "styleguide:build": "...",
+    "prettier:check": "prettier --check 'src/**/*.{js,mdx}'",
+    "validate": "run-s test lint prettier:check",
+    "prerelease": "git checkout master && git pull origin master && npm i && run-s validate styleguide:build && git-authors-cli && git add .",
+    "release": "standard-version -a",
+    "postrelease": "run-s release:*",
+    "release:tags": "git push --follow-tags origin master",
+    "release:github": "conventional-github-releaser -p angular",
+    "ci:validate": "rm -rf node_modules && npm ci && npm run validate",
+    "prepublishOnly": "npm run ci:validate && npm run build"
   },
   "browserslist": [
     ">0.2%",
@@ -34,12 +42,40 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/react-redux": "^6.0.9",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-transition-group": "^2.0.14",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
+    "@testing-library/react": "^8.0.7",
+    "@types/react-redux": "^7.1.1",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/react-transition-group": "^4.2.0",
     "@types/redux-thunk": "^2.1.0",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-react": "^3.6.0"
+    "commitizen": "^4.0.3",
+    "conventional-github-releaser": "^3.1.3",
+    "git-authors-cli": "^1.0.18",
+    "husky": "^3.0.3",
+    "lint-staged": "^9.2.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.18.2",
+    "standard-version": "^7.0.0",
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^4.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,js,jsx}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
