--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactshop",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.15",
@@ -29,7 +29,7 @@
     "validate": "run-s test lint prettier:check",
     "prerelease": "git-authors-cli && git add .",
     "release": "standard-version -a",
-    "postrelease": "run-s release:*",
+    "postrelease": "run-s release:tags",
     "release:tags": "git push --follow-tags origin master",
     "release:github": "conventional-github-releaser -p angular",
     "ci:validate": "rm -rf node_modules && npm ci && npm run validate",
